# advent-of-code-2024-in-rust

./: .gitignore  Cargo.toml  build.sh  readme.md  run.sh
.cursor/rules/: advent-of-code-2024.mdc
1/: 1.rs  1_1.rs  1_2.rs  1_bin  2.rs  2_bin  challenge.txt
2/: 2_1.rs  2_2.rs
3/: 3_1.rs  3_2.rs
4/: 4_1.rs
